--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<div id="app"></div>
+<div class="contents">
+  <h1>Acme Dashboard</h1>
+  <button id="message">Send Message</button>
+  <div id="loader" class="loader"></div>
+  <div id="embed"></div>
+</div>
+
