--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="contents">
-  <h1>Acme Dashboard</h1>
+  <h1>Hayes Search</h1>
   <button id="message">Send Message</button>
   <div id="loader" class="loader"></div>
   <div id="embed"></div>
