--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
-<div class="contents">
-  <h1>Hayes Search</h1>
-  <button id="message">Send Message</button>
-  <div id="loader" class="loader"></div>
-  <div id="embed"></div>
-</div>
+<div class="wrapper">
+  <div class="header">
+    <div class="logo">Hayes</div>
+    <div class="menu-bar">
+      <div class="menu-item">Home</div>
+      <div class="menu-item">About</div>
+      <div class="menu-item">Services</div>
+      <div class="menu-item">Solutions</div>
+    </div>
+  </div>
+  <div class="contents">
+    <div class="search-container">
+      <div class="search-title">
+        <span>Search:<span>
+            <button class="show-message" id="message">Show Alert</button>
+      </div>
+      <div class="search-embed">
+        <div id="loader" class="loader"></div>
+        <div id="embed"></div>
+      </div>
+    </div>
+    <div class="content-block">
+      <div class="left">
+        <h2>Advanced Analytics</h2>
+        <p>Healthcare data scientists, data analysts, and digital analysts provide insights to inform, optimize, and
+          measure what is meaningful. Examples:
+        <ul>
+          <li>Market, consumer, and provider research</li>
+          <li>Audience segmentation</li>
+          <li>Measurement and optimization</li>
+          <li>Deep-dive performance reporting</li>
+        </ul>
+      </div>
+    </div>
 
+    <div class="content-block">
+      <div class="left">
+        <h2>Strategic Consulting</h2>
+        <p>Program execution includes an assigned project management team for resource allocation to keep projects on
+          time and within budget. Your team will proactively provide you with:
+        <ul>
+          <li>Industry and market trends</li>
+          <li>Thought leadership and industry insights</li>
+          <li>Program strategy development</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
