--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <div class="wrapper">
-  <div class="header">
-    <div class="logo">Hayes</div>
-    <div class="menu-bar">
-      <div class="menu-item">Home</div>
-      <div class="menu-item">About</div>
-      <div class="menu-item">Services</div>
-      <div class="menu-item">Solutions</div>
-    </div>
-  </div>
-  <div class="contents">
-    <div class="search-container">
-      <div class="search-title">
-        <span>Search:<span>
-            <button class="show-message" id="message">Show Alert</button>
+	<div class="header">
+		<div class="logo">Hayes</div>
+		<div class="menu-bar">
+			<div class="menu-item">Home</div>
+			<div class="menu-item">About</div>
+			<div class="menu-item">Services</div>
+			<div class="menu-item">Solutions</div>
+		</div>
+	</div>
+	<div class="contents">
+		<div class="search-container">
+			<div class="search-title">
+				<span>Chart: Memory Utilization<span>
+
       </div>
       <div class="search-embed">
         <div id="loader" class="loader"></div>
@@ -47,4 +47,3 @@
     </div>
   </div>
 </div>
-
