Add data sources selection

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <span>Search:<span>
             <button class="show-message" id="message">Show Alert</button>
       </div>
+      <div class="data-source-selector">
+        <label>Select worksheet</label>
+        <select id="data-source">
+          <option value="f0343afe-9ed1-4c14-95ab-d3fe98c79aa6">Retail - Apparel</option>
+          <option value="1c294f74-88ed-4fe2-9a54-58a3b834421f">Retail - Sales</option>
+        </select>
+      </div>
       <div class="search-embed">
         <div id="loader" class="loader"></div>
         <div id="embed"></div>
