--- a/pinboard/index.html
+++ b/pinboard/index.html
@@ -41,7 +41,7 @@
      </div>
       <div class="right-block">
         <div class="user-img">
-          <img src="images/userimg.svg" alt="">
+          <img src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/userimg.svg" alt="">
         </div>
         <div class="username">Patrick Kern 
           <a href="#" class="arrowdown">
