Added hideNavBar and disabledActionReason

--- a/answer/templates.html
+++ b/answer/templates.html
@@ -12,6 +12,7 @@
 <!-- disabledActions -->
 <script type="text/template" id="modifyActions">
     disabledActions: [],
+    disabledActionReason: "Reason for disabling",
     hiddenActions: [],
 </script>
 <!-- runtimeFilters -->
