--- a/app/templates.html
+++ b/app/templates.html
@@ -5,6 +5,10 @@
 <script type="text/template" id="pageId">
      pageId: "{pageId}",
 </script>
+<!-- hideNavBar -->
+<script type="text/template" id="hideNavBar">
+     hidePrimaryNavbar: true,
+</script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
      runtimeFilters: [],
