--- a/pinboard/templates.html
+++ b/pinboard/templates.html
@@ -8,6 +8,7 @@
 <!-- modifyActions -->
 <script type="text/template" id="modifyActions">
     disabledActions: [],
+    disabledActionReason: "Reason for disabling",
     hiddenActions: [],
 </script>
 <!-- runtimeFilters -->
