--- a/search/templates.html
+++ b/search/templates.html
@@ -33,10 +33,7 @@
 <script type="text/template" id="modifyActions">
     disabledActions: [],
     disabledActionReason: "Reason for disabling",
-</script>
-<!-- disabledActions -->
-<script type="text/template" id="disabledActions">
-    disabledActions: [],
+    hiddenActions: [],
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
