--- a/pinboard/index.html
+++ b/pinboard/index.html
@@ -56,6 +56,7 @@
   </header>
   <div class="contents">
     <div class="search-container">
+      <img id="no-data" class="no-data" src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/no-pinboard.svg" />
       <div class="search-embed">
         <div id="loader" class="loader"></div>
         <div id="embed"></div>
