--- a/app/templates.html
+++ b/app/templates.html
@@ -7,7 +7,7 @@
 </script>
 <!-- hideNavBar -->
 <script type="text/template" id="hideNavBar">
-     hidePrimaryNavbar: true,
+     showPrimaryNavbar: true,
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
