SCAL-77675 - Fix for beforeunload dialog

--- a/app/index.html
+++ b/app/index.html
@@ -62,4 +62,10 @@
       </div>
     </div>
   </div>
+  <script>
+      window.addEventListener('beforeunload', function (e) {
+          const el = document.getElementById('embed');
+          el.parentNode.removeChild(el);
+      });
+  </scipt>
 </div>
