--- a/app/templates.html
+++ b/app/templates.html
@@ -5,9 +5,9 @@
 <script type="text/template" id="pageId">
      pageId: "{pageId}",
 </script>
-<!-- hideNavBar -->
-<script type="text/template" id="hideNavBar">
-     hidePrimaryNavbar: true,
+<!-- showNavBar -->
+<script type="text/template" id="showNavBar">
+     showPrimaryNavbar: true,
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
