SCAL-77675 - Fixed previous commit issue

--- a/answer/index.html
+++ b/answer/index.html
@@ -68,5 +68,5 @@
           const el = document.getElementById('embed');
           el.parentNode.removeChild(el);
       });
-  </scipt>
+  </script>
 </div>
