--- a/pinboard/index.html
+++ b/pinboard/index.html
@@ -68,5 +68,5 @@
           const el = document.getElementById('embed');
           el.parentNode.removeChild(el);
       });
-  </scipt>
+  </script>
 </div>
