--- a/search/index.html
+++ b/search/index.html
@@ -67,5 +67,5 @@
           const el = document.getElementById('embed');
           el.parentNode.removeChild(el);
       });
-  </scipt>
+  </script>
 </div>
