SCAL-78298 copy-fixes

--- a/answer/index.html
+++ b/answer/index.html
@@ -28,7 +28,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#">Search sales</a>
+            <a href="#">Search</a>
           </li>
           <li>
             <a href="#" class="active">Transactions</a>
