--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
             <a href="#" class="active">Home</a>
           </li>
           <li>
-            <a href="#">Search sales</a>
+            <a href="#">Search</a>
           </li>
           <li>
             <a href="#">Transactions</a>
