--- a/search/index.html
+++ b/search/index.html
@@ -28,7 +28,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#" class="active">Search sales</a>
+            <a href="#" class="active">Search</a>
           </li>
           <li>
             <a href="#">Transactions</a>
