SCAL-80303 - handle no vizid and pinboardid error

--- a/answer/index.html
+++ b/answer/index.html
@@ -56,10 +56,12 @@
   </header>
   <div class="contents">
     <div class="search-container">
-      <img id="no-data" class="no-data" src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/no-visualization.svg" />
       <div class="search-embed">
         <div id="loader" class="loader"></div>
         <div id="embed"></div>
+      </div>
+      <div id="no-data" class="no-data" >
+          <img src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/no-visualization.svg" />
       </div>
     </div>
   </div>
