SCAL-80303 - handle no vizid and pinboardid error

--- a/pinboard/index.html
+++ b/pinboard/index.html
@@ -56,10 +56,12 @@
   </header>
   <div class="contents">
     <div class="search-container">
-      <img id="no-data" class="no-data" src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/no-pinboard.svg" />
       <div class="search-embed">
         <div id="loader" class="loader"></div>
         <div id="embed"></div>
+      </div>
+      <div class="no-data-container" class="no-data" id="no-data">
+          <img src="https://raw.githubusercontent.com/ts-blink/embed-templates/master/images/no-pinboard.svg" />
       </div>
     </div>
   </div>
