--- a/app/templates.html
+++ b/app/templates.html
@@ -5,6 +5,12 @@
 <script type="text/template" id="pageId">
      pageId: "{pageId}",
 </script>
+<!-- modifyActions -->
+<script type="text/template" id="modifyActions">
+    disabledActions: [],
+    disabledActionReason: "Reason for disabling",
+    hiddenActions: [],
+</script>
 <!-- showNavBar -->
 <script type="text/template" id="showNavBar">
      showPrimaryNavbar: true,
