[SCAL-81062] [SCAL-80298] [SCAL-81068] SCAL-80298 - use enumerated types not string in playground example code SCAL-81068 - knob for `path` in full app embed SCAL-81062 - add runtime filters knob on full app target

--- a/app/templates.html
+++ b/app/templates.html
@@ -17,8 +17,8 @@
 </script>
 <!-- navigateToUrl-->
 <script type="text/template" id="navigateToUrl">
-     path: "pinboards",
-     // pinboard/pinboardId
+     path: "",
+     // eg pinboard/[pinboardId] or insights/results
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
