[SCAL-81062] [SCAL-80298] [SCAL-81068] SCAL-80298 - use enumerated types not string in playground example code SCAL-81068 - knob for `path` in full app embed SCAL-81062 - add runtime filters knob on full app target

--- a/answer/templates.html
+++ b/answer/templates.html
@@ -17,6 +17,10 @@
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-     runtimeFilters: [],
+     runtimeFilters: [{
+          columnName: 'color',
+          operator: RuntimeFilterOp.EQ,
+          values: [ 'red' ]
+          }],
 </script>
 
