--- a/search/templates.html
+++ b/search/templates.html
@@ -37,7 +37,11 @@
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-    runtimeFilters: [],
+    runtimeFilters: [{
+        columnName: 'color',
+        operator: RuntimeFilterOp.EQ,
+        values: [ 'red' ]
+        }],
 </script>
 
 <!-- customActionHandle -->
