--- a/pinboard/templates.html
+++ b/pinboard/templates.html
@@ -13,6 +13,10 @@
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-     runtimeFilters: [],
+     runtimeFilters: [{
+          columnName: 'color',
+          operator: RuntimeFilterOp.EQ,
+          values: [ 'red' ]
+          }],
 </script>
 
