--- a/search/templates.html
+++ b/search/templates.html
@@ -38,10 +38,10 @@
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
     runtimeFilters: [{
-        columnName: 'color',
+        columnName: 'columnName1', // eg: color
         operator: RuntimeFilterOp.EQ,
-        values: [ 'red' ]
-        }],
+        values: ['value1'] // eg: red
+   }],
 </script>
 
 <!-- customActionHandle -->
