--- a/answer/templates.html
+++ b/answer/templates.html
@@ -18,9 +18,9 @@
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
      runtimeFilters: [{
-          columnName: 'color',
+          columnName: 'columnName1', // eg: color
           operator: RuntimeFilterOp.EQ,
-          values: [ 'red' ]
-          }],
+          values: ['value1'] // eg: red
+     }],
 </script>
 
