Navigate to url (#26)
* [SCAL-81062] [SCAL-80298] [SCAL-81068]
SCAL-80298 - use enumerated types not string in playground example code
SCAL-81068 - knob for `path` in full app embed
SCAL-81062 - add runtime filters knob on full app target

* [SCAL-81062] [SCAL-80298] [SCAL-81068]
SCAL-80298 - use enumerated types not string in playground example code
SCAL-81068 - knob for `path` in full app embed
SCAL-81062 - add runtime filters knob on full app target

* import RuntimeFilterOp by default

* import RuntimeFilterOp by default

* Add RuntimeFilterOp for search

--- a/app/templates.html
+++ b/app/templates.html
@@ -15,8 +15,18 @@
 <script type="text/template" id="showNavBar">
      showPrimaryNavbar: true,
 </script>
+<!-- navigateToUrl-->
+<script type="text/template" id="navigateToUrl">
+     // eg path:"pinboard/[pinboardId]"
+     // or "insights/results"
+     path: "",
+</script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-     runtimeFilters: [],
+     runtimeFilters: [{
+          columnName: 'columnName1', // eg: color
+          operator: RuntimeFilterOp.EQ,
+          values: ['value1'] // eg: red
+     }],
 </script>
 
