--- a/answer/templates.html
+++ b/answer/templates.html
@@ -17,6 +17,10 @@
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-     runtimeFilters: [],
+     runtimeFilters: [{
+          columnName: 'columnName1', // eg: color
+          operator: RuntimeFilterOp.EQ,
+          values: ['value1'] // eg: red
+     }],
 </script>
 
