--- a/pinboard/templates.html
+++ b/pinboard/templates.html
@@ -13,6 +13,10 @@
 </script>
 <!-- runtimeFilters -->
 <script type="text/template" id="runtimeFilters">
-     runtimeFilters: [],
+     runtimeFilters: [{
+          columnName: 'columnName1', // eg: color
+          operator: RuntimeFilterOp.EQ,
+          values: ['value1'] // eg: red
+     }],
 </script>
 
