--- a/answer/templates.html
+++ b/answer/templates.html
@@ -23,4 +23,12 @@
           values: ['value1'] // eg: red
      }],
 </script>
-
+<!-- customActionHandle -->
+<script type="text/template" id="customActionHandle">
+     .on(EmbedEvent.CustomAction, payload => {
+          const data = payload.data;
+          if (data.id === 'insert Custom Action ID here') {
+               console.log('Custom Action event:', data.columnsAndData);
+          }
+     })
+</script>
