Added enum for pageId

--- a/app/templates.html
+++ b/app/templates.html
@@ -3,7 +3,7 @@
 
 <!-- pageId -->
 <script type="text/template" id="pageId">
-     pageId: "{pageId}",
+     pageId: {pageId},
 </script>
 <!-- modifyActions -->
 <script type="text/template" id="modifyActions">
