Add knob templates to the search API

--- a/search/templates.html
+++ b/search/templates.html
@@ -8,6 +8,14 @@
 <script type="text/template" id="searchQuery">
       searchQuery: "",
 </script>
+<!-- Search token string -->
+<script type="text/template" id="searchQueryTokens">
+    searchQueryTokens: "",
+</script>
+<!-- Execute search -->
+<script type="text/template" id="executeSearch">
+    executeSearch: "",
+</script>
 <!-- Answer id -->
 <script type="text/template" id="answerId">
       answerId: "{answerId}",
