- Added expandAllDataSource for search page

--- a/search/templates.html
+++ b/search/templates.html
@@ -29,6 +29,10 @@
 <script type="text/template" id="hideDataSources">
     hideDataSources: true,
 </script>
+<!-- expandAllDataSource -->
+<script type="text/template" id="expandAllDataSource">
+    expandAllDataSource: true,
+</script>
 <!-- hideResults -->
 <script type="text/template" id="hideResults">
     hideResults: true,
