SCAL-86267: disable profile and help buttons in nav bar

--- a/app/templates.html
+++ b/app/templates.html
@@ -15,6 +15,10 @@
 <script type="text/template" id="showNavBar">
      showPrimaryNavbar: true,
 </script>
+<!-- disableProfileAndHelp -->
+<script type="text/template" id="disableProfileAndHelp">
+     disableProfileAndHelp: true,
+</script>
 <!-- navigateToUrl-->
 <script type="text/template" id="navigateToUrl">
      // eg path:"pinboard/[pinboardId]"
